--- a/Challenger/StoryBoards/UserInfo.storyboard
+++ b/Challenger/StoryBoards/UserInfo.storyboard
@@ -48,7 +48,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vfc-DF-CIC">
-                                <rect key="frame" x="16" y="570" width="343" height="30"/>
+                                <rect key="frame" x="16" y="553" width="343" height="47"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Log Out">
@@ -74,7 +74,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zd6-cu-SNe">
-                                <rect key="frame" x="138" y="140" width="41" height="21"/>
+                                <rect key="frame" x="77" y="140" width="221" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -86,6 +86,8 @@
                     </view>
                     <navigationItem key="navigationItem" title="My Account" id="oj8-Aj-NCN"/>
                     <connections>
+                        <outlet property="email" destination="zd6-cu-SNe" id="MVA-oJ-phG"/>
+                        <outlet property="logOut" destination="Vfc-DF-CIC" id="mX2-fW-5ux"/>
                         <segue destination="TQo-s9-lTx" kind="presentation" identifier="Login" id="0KX-Nh-H4O"/>
                     </connections>
                 </viewController>
