--- a/Challenger/StoryBoards/Calendar.storyboard
+++ b/Challenger/StoryBoards/Calendar.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -156,12 +157,15 @@
                                 <constraints>
                                     <constraint firstItem="cyG-yJ-VUf" firstAttribute="leading" secondItem="tuZ-WY-9Gc" secondAttribute="leading" id="Urn-Ut-Ikq"/>
                                     <constraint firstAttribute="trailing" secondItem="cyG-yJ-VUf" secondAttribute="trailing" id="fMe-PB-Gqf"/>
-                                    <constraint firstAttribute="height" constant="295.5" id="qEL-F2-jAH"/>
+                                    <constraint firstAttribute="height" constant="295" id="qEL-F2-jAH"/>
                                 </constraints>
                             </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WSV-Yk-tfF">
-                                <rect key="frame" x="0.0" y="394" width="375" height="171"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WSV-Yk-tfF">
+                                <rect key="frame" x="0.0" y="394" width="375" height="185"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="171" id="ou3-2i-T3t"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Comment" textLabel="m2T-LV-39D" style="IBUITableViewCellStyleDefault" id="1Ed-kc-fbK">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -187,22 +191,27 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="91.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Archive" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xWr-3O-ING">
-                                                    <rect key="frame" x="15" y="35" width="84" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Archive" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xWr-3O-ING">
+                                                    <rect key="frame" x="23" y="21" width="57.5" height="52"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f88-mx-4I2">
-                                                    <rect key="frame" x="291" y="30" width="69" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f88-mx-4I2">
+                                                    <rect key="frame" x="299" y="31.5" width="69" height="30"/>
                                                     <state key="normal" title="Download"/>
                                                     <connections>
                                                         <action selector="buttonDownload:" destination="68f-nK-ddN" eventType="touchUpInside" id="196-bh-6TZ"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="xWr-3O-ING" firstAttribute="top" secondItem="r8j-dZ-JDw" secondAttribute="topMargin" constant="10" id="5fy-lT-0xb"/>
+                                                <constraint firstItem="f88-mx-4I2" firstAttribute="trailing" secondItem="r8j-dZ-JDw" secondAttribute="trailingMargin" constant="8" id="Fp3-5e-v46"/>
+                                                <constraint firstItem="f88-mx-4I2" firstAttribute="centerY" secondItem="xWr-3O-ING" secondAttribute="centerY" id="JgY-GI-Eul"/>
+                                                <constraint firstItem="xWr-3O-ING" firstAttribute="leading" secondItem="r8j-dZ-JDw" secondAttribute="leadingMargin" constant="8" id="YmL-Ox-ool"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="xWr-3O-ING" secondAttribute="bottom" constant="8" id="kJE-e4-vc2"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="archiveLabel" destination="xWr-3O-ING" id="ojc-iU-BxX"/>
@@ -210,41 +219,74 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="86o-8U-ltc">
-                                <rect key="frame" x="343" y="586" width="26" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="ic_send"/>
-                                <connections>
-                                    <action selector="buttonTextSend:" destination="RGy-J3-no2" eventType="touchUpInside" id="OSY-C7-ZgE"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a8x-7o-hV6">
-                                <rect key="frame" x="62" y="583" width="279" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OTE-3w-tNt">
-                                <rect key="frame" x="4" y="586" width="24" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="ic_insert_photo"/>
-                                <connections>
-                                    <action selector="buttonImageSend:" destination="RGy-J3-no2" eventType="touchUpInside" id="GQw-pB-4Cl"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ko5-Tn-4Yv">
-                                <rect key="frame" x="33" y="586" width="26" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="ic_archive"/>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QnY-4V-HL6">
+                                <rect key="frame" x="0.0" y="583" width="375" height="35"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="DlD-nK-vMZ">
+                                        <rect key="frame" x="4" y="4" width="367" height="24"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OTE-3w-tNt">
+                                                <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="24" id="fDu-7M-OR0"/>
+                                                    <constraint firstAttribute="height" constant="24" id="liN-jn-SBL"/>
+                                                </constraints>
+                                                <state key="normal" title="Button" image="ic_insert_photo"/>
+                                                <connections>
+                                                    <action selector="buttonImageSend:" destination="RGy-J3-no2" eventType="touchUpInside" id="GQw-pB-4Cl"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ko5-Tn-4Yv">
+                                                <rect key="frame" x="28" y="0.0" width="26" height="24"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="24" id="XGz-go-b9G"/>
+                                                    <constraint firstAttribute="width" constant="26" id="oWY-pv-tUR"/>
+                                                </constraints>
+                                                <state key="normal" title="Button" image="ic_archive"/>
+                                            </button>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a8x-7o-hV6">
+                                                <rect key="frame" x="58" y="0.0" width="279" height="24"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="279" id="NXO-PY-eer"/>
+                                                    <constraint firstAttribute="height" constant="24" id="eXk-ae-8Sv"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="86o-8U-ltc">
+                                                <rect key="frame" x="341" y="0.0" width="26" height="24"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="26" id="keu-Gj-XL7"/>
+                                                    <constraint firstAttribute="height" constant="24" id="rcz-eL-XyR"/>
+                                                </constraints>
+                                                <state key="normal" title="Button" image="ic_send"/>
+                                                <connections>
+                                                    <action selector="buttonTextSend:" destination="RGy-J3-no2" eventType="touchUpInside" id="OSY-C7-ZgE"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="DlD-nK-vMZ" secondAttribute="trailing" constant="4" id="PNf-D3-ktB"/>
+                                    <constraint firstItem="DlD-nK-vMZ" firstAttribute="leading" secondItem="QnY-4V-HL6" secondAttribute="leading" constant="4" id="WDB-hB-h5D"/>
+                                    <constraint firstItem="DlD-nK-vMZ" firstAttribute="top" secondItem="QnY-4V-HL6" secondAttribute="top" constant="4" id="YI5-aU-afd"/>
+                                    <constraint firstAttribute="height" constant="35" id="gMD-0Q-CCH"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="tuZ-WY-9Gc" firstAttribute="leading" secondItem="wLo-jL-c6w" secondAttribute="leading" id="5u7-kd-hBq"/>
-                            <constraint firstItem="WSV-Yk-tfF" firstAttribute="top" secondItem="cyG-yJ-VUf" secondAttribute="bottom" constant="-0.5" id="E9T-L6-RkO"/>
+                            <constraint firstItem="WSV-Yk-tfF" firstAttribute="top" secondItem="cyG-yJ-VUf" secondAttribute="bottom" id="E9T-L6-RkO"/>
                             <constraint firstItem="OKN-66-shX" firstAttribute="centerX" secondItem="sLx-Vt-8D7" secondAttribute="centerX" id="EJI-5u-7Qe"/>
+                            <constraint firstItem="QnY-4V-HL6" firstAttribute="trailing" secondItem="wLo-jL-c6w" secondAttribute="trailing" id="MEG-Kn-FjX"/>
                             <constraint firstItem="WSV-Yk-tfF" firstAttribute="trailing" secondItem="wLo-jL-c6w" secondAttribute="trailing" id="OMR-gV-DDh"/>
+                            <constraint firstItem="QnY-4V-HL6" firstAttribute="bottom" secondItem="wLo-jL-c6w" secondAttribute="bottom" id="OV3-qH-is4"/>
+                            <constraint firstItem="QnY-4V-HL6" firstAttribute="top" secondItem="WSV-Yk-tfF" secondAttribute="bottom" constant="4" id="RTb-UA-obU"/>
+                            <constraint firstItem="QnY-4V-HL6" firstAttribute="leading" secondItem="wLo-jL-c6w" secondAttribute="leading" id="YO9-Q1-qoL"/>
                             <constraint firstItem="tuZ-WY-9Gc" firstAttribute="trailing" secondItem="wLo-jL-c6w" secondAttribute="trailing" id="YpQ-5e-CPx"/>
                             <constraint firstItem="tuZ-WY-9Gc" firstAttribute="top" secondItem="OKN-66-shX" secondAttribute="bottom" constant="2.5" id="bP4-hj-pVH"/>
                             <constraint firstItem="WSV-Yk-tfF" firstAttribute="leading" secondItem="wLo-jL-c6w" secondAttribute="leading" id="pVg-vu-H3g"/>
